# openCL

hw1/: CMakeLists.txt  convolution.cl  main.cpp
hw2/: CMakeLists.txt  main.cpp  scan.cl
